--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,16 @@
   <title>Softcode</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Softcode - Your partner in digital innovation">
+  <meta name="keywords" content="software development, mobile apps, web development, UI/UX design, graphics design, animation">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Bootstrap JS & CSS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+  <!-- Your App Styles -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <app-root></app-root>
